63 Create menu in navbar that includes profile, contact and sign out tabs when a user logged in to improve layout. Add set expanded toggle to said dropdown menu to ensure that it can be opened within burger menu on mobile

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -4,9 +4,17 @@
 }
 
 .NavLink {
-    padding: 5px;
+  padding: 5px;
 }
 
 .Active i {
   color: #8c52ff;
+}
+
+#dropdownMenu {
+  color: #2f4858;
+  transition: color ease-in-out 0.3s;
+  padding: 5px;
+  text-align: right;
+  margin-left: 20px;
 }
